Sat Jan 25 22:37:07 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in, audio/Makefile.in, control/Makefile.in,
	elfun/Makefile.in, general/Makefile.in, image/Makefile.in,
	io/Makefile.in, linear-algebra/Makefile.in,
	miscellaneous/Makefile.in, plot/Makefile.in,
	polynomial/Makefile.in, set/Makefile.in, signal/Makefile.in,
	specfun/Makefile.in, special-matrix/Makefile.in,
	startup/Makefile.in, statistics/Makefile.in, strings/Makefile.in,
	time/Makefile.in (bin-dist): New target.

Wed Jan 22 11:28:30 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* specfun/erfinv.m: Avoid A([]) = X, X != [] error.

Tue Jan 21 11:16:40 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/xor.m: Make it work.

Mon Jan 20 12:28:34 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/sombrero.m: Doc fix.

Tue Jan  7 00:16:52 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 2.0.1 released.

Thu Dec 19 22:16:46 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* elfun/lcm.m: Replace missing if statement.

	* elfun/gcd.m: Report error if no input args.
	* elfun/lcm.m: Likewise.

Mon Dec 16 15:23:04 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (install): Use ls -LR to create ls-R database.
	Also list contents of $libexecdir/octave in ls-R database.

Tue Dec 10 01:43:07 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 2.0 released.

Fri Dec  6 15:23:46 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 1.94.

Sun Dec  1 20:55:34 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* strings/str2num.m: New file.

Wed Nov 20 01:00:24 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 1.93.

Tue Nov 19 15:13:35 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* linear-algebra/commutation_matrix.m, linear-algebra/cross.m,
	linear-algebra/duplication_matrix.m, linear-algebra/vec.m,
	linear-algebra/vech.m: New files from Kurt Hornik.

	* general/nextpow2.m, general/shift.m, general/diff.m,
	general/common_size.m: New files from Kurt Hornik.
