@@ -72,6 +72,13 @@ function __plt__ (caller, ...)
 	  x_set = 1;
 	endif
 
+	## Something fishy is going on.  I don't think this should be
+	## necessary, but without it, sometimes not all the lines from a
+	## given plot command appear on the screen.  Even with it, the
+	## delay might not be long enough for some systems...
+
+	usleep (1e5);
+
       endwhile
 
       ## Handle last plot.
@@ -83,12 +90,6 @@ function __plt__ (caller, ...)
 	  __plt1__ (x, fmt);
 	endif
       endif
-
-      ## Something fishy is going on.  I don't think this should be
-      ## necessary, but without it, sometimes not all the lines from a
-      ## given plot command appear on the screen.
-
-      replot;
 
     unwind_protect_cleanup
 
